# memeflowuni

./: .env  README.md  bun.lockb  index.html  package-lock.json  package.json
memeflow_contract/: Anchor.toml  Cargo.toml  package-lock.json  package.json
memeflow_contract/programs/memeflow_contract/: Cargo.toml
memeflow_contract/programs/memeflow_contract/src/: lib.rs
memeflow_contract/tests/: memeflow_contract.ts
refactored/: DOCUMENTATION.md
refactored/hooks/: useCommissionTester.ts  useNetworkData.ts
refactored/services/: SupabaseService.ts
services/: CommissionService.ts
solana-release/: .crates2.json  version.yml
src/: App.tsx
src/components/: ActiveOperations.tsx  GrowthChart.tsx  Layout.tsx  MainNavigation.tsx  RankingProgress.tsx  RealTimeGrowthChart.tsx  RevenueMetrics.tsx  WalletConnect.tsx
src/contexts/: WalletContext.tsx
src/hooks/: use-mobile.tsx  useUserData.ts  useWalletData.ts
src/pages/: Auth.tsx  CopyTradePage.tsx  Dashboard.tsx  Followers.tsx  Index.tsx  MLM.tsx  Master.tsx  NetworkDetailPage.tsx  NetworkExplorer.tsx  NetworkPage.tsx  NotFound.tsx
src/services/: AffiliateService.ts  CapitalGrowthService.ts  CommissionDistributionService.ts  CommissionService.ts  CommissionTypes.ts  CopyTradeExecutor.ts  DashboardService.ts  MLMCommissionService.ts  PhantomWalletService.ts  RankService.ts  SupabaseDataService.ts  TradeCalculationService.ts  TradeProcessorService.ts  TradeRecordService.ts  TradeService.ts  UplineService.ts  UserBalanceService.ts  VisualizationService.ts  WalletDataService.ts  (+1 more)
supabase/: config.toml
(+35 files in other folders)
